--- a/index.html
+++ b/index.html
@@ -2,9 +2,17 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
-	<title>Document</title>
+	<title>FizzBuzz</title>
+	<script src = "http://code.jquery.com/jquery-2.1.4.min.js"></script>
+	<script src = "js.js"></script>
+	<style>
+	div {
+		
+	}
+	</style>
 </head>
 <body>
-	
+	<h1>FizzBuzz</h1>
+	<div></div>
 </body>
 </html>
