--- a/index.html
+++ b/index.html
@@ -3,16 +3,19 @@
 <head>
 	<meta charset="UTF-8">
 	<title>FizzBuzz</title>
+
+	<link rel="stylesheet" href="style.css">
 	<script src = "http://code.jquery.com/jquery-2.1.4.min.js"></script>
 	<script src = "js.js"></script>
-	<style>
-	div {
-		
-	}
-	</style>
-</head>
+	</head>
 <body>
+	<div class="container">
+
+
 	<h1>FizzBuzz</h1>
-	<div></div>
+		<input type="text">
+		<button type="button" class="fizzButton">go</button>
+	<div class="content"></div>
+	</div>
 </body>
 </html>
